; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/kafs/extr_afslib.c_aix_pioctl.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/kafs/extr_afslib.c_aix_pioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ViceIoctl = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @aix_pioctl(i8* %0, i32 %1, %struct.ViceIoctl* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.ViceIoctl*, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.ViceIoctl* %2, %struct.ViceIoctl** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load i8*, i8** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load %struct.ViceIoctl*, %struct.ViceIoctl** %7, align 8
  %12 = load i32, i32* %8, align 4
  %13 = call i32 @lpioctl(i8* %9, i32 %10, %struct.ViceIoctl* %11, i32 %12)
  ret i32 %13
}

declare dso_local i32 @lpioctl(i8*, i32, %struct.ViceIoctl*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
